--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "register-service-worker": "^1.7.2",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1",
+    "vercel": "^32.5.3",
     "vue": "^3.3.4",
     "vue-3-sanitize": "^0.1.4",
     "vue-router": "^4.2.5"
