--- a/public/manifest.json
+++ b/public/manifest.json
@@ -356,11 +356,13 @@
     {
       "src": "android/maskable_icon_x128.png",
       "sizes": "128x128",
+      "type": "image/png",
       "purpose": "maskable"
     },
     {
       "src": "android/maskable_icon.png",
       "sizes": "418x418",
+      "type": "image/png",
       "purpose": "maskable"
     },
     {
