--- a/public/manifest copy.json
+++ b/public/manifest copy.json
@@ -533,9 +533,9 @@
   },
   "related_applications": [
     {
-      "platform": "chrome_web_store",
-      "url": "https://discord.com",
-      "id": ""
+      "platform": "play",
+      "url": "https://play.google.com/store/apps/details?id=com.discord&hl=en&gl=US",
+      "id": "com.discord.app"
     }
   ],
   "scope": "/"
