--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,7 +27,7 @@
   "related_applications": [
     {
       "platform": "play",
-      "url": "https://play.google.com/store/apps/details?id=com.discord&amp;hl=en&amp;gl=US",
+      "url": "https://play.google.com/store/apps/details?id=com.discord&amp;amp;hl=en&amp;amp;gl=US",
       "id": "com.discord.app"
     }
   ],
@@ -554,5 +554,6 @@
     "browser",
     "window-controls-overlay",
     "minimal-ui"
-  ]
+  ],
+  "iarc_rating_id": "10"
 }
